--- a/src/proxy/Cargo.toml
+++ b/src/proxy/Cargo.toml
@@ -14,8 +14,10 @@ chrono = "0.4"
 clap = { version = "=4.0.0", features = ["derive"] }
 fern = "0.6"
 futures = "0.3"
-jemallocator = "0.3.2"
-jemalloc-ctl = "0.3.2"
+jemalloc-ctl = "0.3"
+jemalloc-sys = { version = "*", features = ["stats", "profiling"] }
+jemallocator = { version = "0.3", features = ["profiling"] }
+libc = "0.2"
 log = "0.4"
 log4rs = { version = "0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"]}
 nix = { version = "0.26.2", features = ["signal"]}
